--- a/generator/template/package.json
+++ b/generator/template/package.json
@@ -1,39 +1,32 @@
 {
-  "name": "web3",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "template",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "lint": "eslint --fix  --ext .js,.vue src",
-    "watch": "webpack --progress --watch",
-    "start": "wbWebpack start",
-    "test": "wbWebpack test",
-    "build": "wbWebpack build",
-    "dev": "wbWebpack develop"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.js": [
-      "eslint --fix",
-      "git add"
-    ],
-    "src/**/*.less": [
-      "stylelint --fix",
-      "git add"
-    ]
-  },
-  "devDependencies": {
-    "eslint": "^5.16.0",
-    "husky": "^2.3.0",
-    "lint-staged": "^7.2.2",
-    "stylelint": "^10.0.1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "front-common": "git+ssh://git@git.wb-intra.com:web_group/front-common.git",
-    "front-base-webpack": "git+ssh://git@git.wb-intra.com:web_group/front-base-webpack.git"
+    "core-js": "^3.4.3",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.0",
+    "@vue/cli-plugin-vuex": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "prettier": "^1.19.1",
+    "vue-template-compiler": "^2.6.10"
   }
 }
