--- a/generator/template/package.json
+++ b/generator/template/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "lint": "eslint --fix  --ext .js,.vue src",
+    "watch": "webpack --progress --watch",
+    "start": "vue-cli-service start",
+    "test": "vue-cli-service test",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vue-cli-service develop",
+    "update_common": "rm -r -f node_modules/front-common & rm -r -f node_modules/_front-common@1.0.1@front-common & cnpm i"
   },
   "dependencies": {
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "front-common": "git+ssh://git@pwgit.wb-intra.com:web_group/front-common.git"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
